--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aleksandra Ilieva | Personal Brand & Leadership Coach</title>
+    <title>Biljana Lazarova | Personal Brand & Leadership Coach</title>
     <meta name="description" content="Помагам на амбициозни жени да изградат 6 & 7-цифрен личен бренд без да го изгубат животот.">
     
     <!-- Google Fonts -->
@@ -173,4 +173,5 @@
     </footer>
 
 </body>
+
 </html>
