--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="container grid" style="align-items:center;">
             <div>
                 <h2>За мене</h2>
-                <p>За 18 месеци поминав од развод и плата од 1.200 € → 50.000+ € месечно со личен бренд и онлајн бизнис.</p>
+                <p>За 18 месеци до плата од 1.200 € → 50.000+ € месечно со личен бренд и онлајн бизнис.</p>
                 <p>Денес сум ментор на жени кои сакаат да бидат слободни, богати и исполнети – истовремено.</p>
                 <p>Соработував со клиенти од 15 земји и помогнав да заработат преку 3.000.000 € заедно.</p>
                 <br>
@@ -175,3 +175,4 @@
 </body>
 
 </html>
+
